crates/buff-lang-codegen-rust/tests/snapshots/web_codegen__uuid_codegen_v7_snapshot.snap
---
source: crates/buff-lang-codegen-rust/tests/web_codegen.rs
assertion_line: 723
expression: src
---
fn f() {
    uuid::Uuid::now_v7().to_string();
}
